welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: expected class or object definition
def snake(){
^SnakeBuggle:32: error: expected class or object definition
def posf():Boolean ={
^SnakeBuggle:54: error: Unmatched closing brace '}' ignored here
  } 
  ^